update packages, fix problems with gulp-imagemin package.json - updated to the latest versions "optipng-bin": "^3.1.4" - without it gulp-imagemin doesn't optimize png correct box-sizing was added to the main.scss psd folder was added to the .gitignore

--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.13.10",
-    "@babel/preset-env": "^7.13.10",
-    "browser-sync": "^2.26.14",
+    "@babel/core": "^7.15.8",
+    "@babel/preset-env": "^7.15.8",
+    "browser-sync": "^2.27.6",
     "del": "^6.0.0",
     "gulp": "^4.0.2",
-    "gulp-autoprefixer": "^7.0.1",
+    "gulp-autoprefixer": "^8.0.0",
     "gulp-babel": "^8.0.0",
     "gulp-clean-css": "^4.3.0",
     "gulp-concat": "^2.6.1",
@@ -22,15 +22,17 @@
     "gulp-if": "^3.0.0",
     "gulp-imagemin": "^7.1.0",
     "gulp-newer": "^1.4.0",
-    "gulp-notify": "^3.2.0",
-    "gulp-postcss": "^9.0.0",
-    "gulp-sass": "^4.1.0",
+    "gulp-notify": "^4.0.0",
+    "gulp-postcss": "^9.0.1",
+    "gulp-sass": "^5.0.0",
     "gulp-sourcemaps": "^3.0.0",
     "gulp-svg-sprite": "^1.5.0",
-    "gulp-svgmin": "^3.0.0",
-    "gulp-terser": "^2.0.1",
-    "postcss": "^8.2.8",
-    "postcss-sorting": "^6.0.0"
+    "gulp-svgmin": "^4.1.0",
+    "gulp-terser": "^2.1.0",
+    "optipng-bin": "^3.1.4", 
+    "postcss": "^8.3.11",
+    "postcss-sorting": "^7.0.1",
+    "sass": "^1.43.4"
   },
   "version": "1.0.0",
   "dependencies": {},
